--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <p class="w3-opacity">Project Leader</p>
       <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
       <!--<p><button class="w3-button w3-blue w3-block">Contact</button></p> -->
-      <p class="w3-opacity">o</p>
+      <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/austin.jpg" alt="austin" style="width:70%">
