--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <br>
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1245px; min-width:1245px;" id="home">
-  <img class="w3-image w3-center" style="border-radius: 25px;" src="images/DEBBIE_banner.png" alt="Debbie_img" width="1500">
-</header>
+  <img class="w3-image w3-center" style="border-radius: 25px;" src="images/Debbie_long.png" alt="Debbie_img" width="1500">
+</header>  	
 
 <!-- Page content max-width:1564px -->
 <div class="w3-content w3-padding w3-white" style="max-width:1300px; min-width: 1300px;">
