ontology image changes

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
         <br>
         <div class="w3-row-padding">
           <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
-            <div class="w3-display-container">
-              <a href="http://owlgred.lumii.lv/online_visualization/pbqt"><img src="images/static_ontology.png" alt="static" style="width:500px;padding-left:15px;padding-top: 15px"></a>
+            <div class="w3-display-container w3-center">
+              <a href="http://owlgred.lumii.lv/online_visualization/pbqt"><img src="images/static_ontology.png" alt="static" style="width:500px; border:1px solid #021a40;"></a>
               <center><p>Static Visualization on <a href="http://owlgred.lumii.lv/online_visualization/pbqt">OWLGrEd</a></p></center>
             </div>
           </div>
           <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
-            <div class="w3-display-container">
-              <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl"><img src="images/dynamic_visualization.png" alt="dynamic" style="width:600px; filter:brightness(110%);padding-right:15px;padding-top: 15px"></a>
+            <div class="w3-display-container w3-center">
+              <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl"><img src="images/dynamic_visualization.png" alt="dynamic" style=" height:480px;width:510px; filter:brightness(110%);border:1px solid #021a40;" ></a>
               <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
             </div>
           </div>
@@ -151,7 +151,7 @@
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Team</h2>
   <div class="w3-row-padding">
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
-      <img src="images/osnat_hakimi.jpg" alt="Osnat" style="width:70%">
+      <img src="images/osnat_hakimi.jpg" alt="Osnat" style="width:70%;">
       <h3>Osnat Hakimi</h3>
       <p class="w3-opacity">Project Leader</p>
       <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
