header image changes to size

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <br>
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1245px; min-width:1245px;" id="home">
-  <img class="w3-image w3-center" style="border-radius: 25px;" src="images/Debbie_long.png" alt="Debbie_img" width="1500">
+  <img class="w3-image w3-center" style="border-radius: 25px;" src="images/Debbie_long.png" alt="Debbie_img">
 </header>  	
 
 <!-- Page content max-width:1564px -->
