--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
    <!-- Ontology Section -->
   <div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="ontology">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16"">Ontology</h2>
-    <p> <a href="https://bioportal.bioontology.org/ontologies/DEB">The Devices, Experimental scaffolds and Biomaterials Ontology (DEB)</a> was
-    developed to facilitate information curation in the area of medical
-    devices, experimental scaffolds and biomaterials. The ontology was
-    designed to complement existing medical vocabularies, with emphasis on
-    material processing, structures and features associated with
-    biomaterials and experimental scaffolds. It was developed using text
-    mining tool and a systematic approach.
+    <p> <a href="https://bioportal.bioontology.org/ontologies/DEB">The Devices, Experimental scaffolds and 
+    Biomaterials Ontology (DEB)</a> is an open resource for organizing information about biomaterials, 
+    their design, manufacture and biological testing. It was developed using text analysis for identifying 
+    ontology terms from a biomaterials gold standard corpus, systematically curated to represent the domain’s lexicon. 
+    Topics covered by DEB were validated by members of the biomaterials research community. The ontology may be used 
+    for searching terms, performing annotations for machine learning applications, standardized meta-data indexing 
+    and other cross-disciplinary data exploitation. 
+    If you are a biomaterials scientist, we encourage and welcome your input to this effort! You can flag terms and errors through 
+    the 'issues' tab in <a href="https://github.com/ProjectDebbie/Ontology_DEB"> DEB's GitHub repository</a>.                                                                                        
         <br>
         <br>
         <p>In addition, below you can find the static and dynamic visualization of the ontology.</p>
