--- a/index.html
+++ b/index.html
@@ -184,6 +184,41 @@
   </div>
 </div>
 
+                           <div class="w3-container w3-padding-16" id="team">
+    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Team</h2>
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
+      <img src="images/osnat_hakimi.jpg" alt="Osnat" style="width:70%;">
+      <h3>Osnat Hakimi</h3>
+      <p class="w3-opacity">Scientific advisor</p>
+      <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
+      <!--<p><button class="w3-button w3-blue w3-block">Contact</button></p> -->
+      <p class="w3-opacity"></p>
+    </div>
+    <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
+      <img src="images/austin.jpg" alt="austin" style="width:70%">
+      <h3>Austin McKitrick</h3>
+      <p class="w3-opacity">Scientific advisor</p>
+      <p>Austin is a Masters Student in Bioinformatics for Health Sciences at Universitat Pompeu Fabra (UPF) in Barcelona.</p>
+      <p class="w3-opacity"></p>
+    </div>
+    <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
+      <img src="images/C Fuenteslopez (1).jpg" alt="carla" style="width:68%">
+      <h3>Carla V. Fuenteslópez</h3>
+      <p class="w3-opacity">Scientific advisor</p>
+      <p>Carla is a DPhil Student studying Engineering Science, with a focus in nanomedicine and tissue engineering, at the University of Oxford.</p>
+      <p class="w3-opacity"></p>
+    </div>
+    <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
+      <img src="images/javi.jpeg" alt="javi" style="width:68%">
+      <h3>Javier Corvi</h3>
+      <p class="w3-opacity">Collaborator</p>
+      <p>Javi is a Research Engineer at the Barcelona Supercomputing Center.</p>
+      <p class="w3-opacity"></p>
+    </div>
+  </div>
+</div>
+
 
 <!-- End page content -->
 
