--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
   </div>
 </div>
 
-                           <div class="w3-container w3-padding-16" id="team">
+<div class="w3-container w3-padding-16" id="team">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Team</h2>
   <div class="w3-row-padding">
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/osnat_hakimi.jpg" alt="Osnat" style="width:70%;">
-      <h3>Osnat Hakimi</h3>
+      <h3>Maria-Pau Ginebra</h3>
       <p class="w3-opacity">Scientific advisor</p>
       <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
       <!--<p><button class="w3-button w3-blue w3-block">Contact</button></p> -->
