--- a/index.html
+++ b/index.html
@@ -185,7 +185,6 @@
 </div>
 
 <div class="w3-container w3-padding-16" id="team">
-    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Team</h2>
   <div class="w3-row-padding">
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/osnat_hakimi.jpg" alt="Osnat" style="width:70%;">
@@ -196,10 +195,10 @@
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
-      <img src="images/austin.jpg" alt="austin" style="width:70%">
-      <h3>Austin McKitrick</h3>
+      <img src="images/MKrallinger.jpeg" alt="austin" style="width:70%">
+      <h3>Martin Krallinger</h3>
       <p class="w3-opacity">Scientific advisor</p>
-      <p>Austin is a Masters Student in Bioinformatics for Health Sciences at Universitat Pompeu Fabra (UPF) in Barcelona.</p>
+      <p>Martin Krallinger is the head of the text mining unit at the Barcelona Supercomputing Center</p>
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
