--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 <div class="w3-container w3-padding-16" id="team">
   <div class="w3-row-padding">
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
-      <img src="images/osnat_hakimi.jpg" alt="Osnat" style="width:70%;">
+      <img src="images/MPGinebra.jpeg" alt="osnat" style="width:70%;">
       <h3>Maria-Pau Ginebra</h3>
       <p class="w3-opacity">Scientific advisor</p>
-      <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
+      <p>Maria-Pau is head of the Department of Materials and Engineering at the Universitat Politècnica de Catalunya</p>
       <!--<p><button class="w3-button w3-blue w3-block">Contact</button></p> -->
       <p class="w3-opacity"></p>
     </div>
@@ -202,10 +202,10 @@
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
-      <img src="images/C Fuenteslopez (1).jpg" alt="carla" style="width:68%">
-      <h3>Carla V. Fuenteslópez</h3>
+      <img src="images/Gelpi.jpeg" alt="carla" style="width:68%">
+      <h3>Josep Gelpi</h3>
       <p class="w3-opacity">Scientific advisor</p>
-      <p>Carla is a DPhil Student studying Engineering Science, with a focus in nanomedicine and tissue engineering, at the University of Oxford.</p>
+      <p>Josep is a group leader at the Barcelona Supercomputing Center</p>
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
