--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 </div>
 
 <div class="w3-container w3-padding-16" id="team">
+    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Scientific Advice</h2>
   <div class="w3-row-padding">
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/MPGinebra.jpeg" alt="osnat" style="width:70%;">
@@ -209,10 +210,10 @@
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
-      <img src="images/javi.jpeg" alt="javi" style="width:68%">
-      <h3>Javier Corvi</h3>
-      <p class="w3-opacity">Collaborator</p>
-      <p>Javi is a Research Engineer at the Barcelona Supercomputing Center.</p>
+      <img src="images/AlexPerera.jpeg" alt="javi" style="width:68%">
+      <h3>Alex Lluna Perera</h3>
+      <p class="w3-opacity">Scientific advisor</p>
+      <p>Alex is leader of the bioinformatics and biomedical signals laboratory (B2S) at the Universitat Politècnica de Catalunya.</p>
       <p class="w3-opacity"></p>
     </div>
   </div>
