--- a/index.html
+++ b/index.html
@@ -164,21 +164,21 @@
       <img src="images/austin.jpg" alt="austin" style="width:70%">
       <h3>Austin McKitrick</h3>
       <p class="w3-opacity">Research Assistant</p>
-      <p>Austin is a Masters Student in Bioinformatics for Health Sciences at Universitat Pompeu Fabra (UPF) in Barcelona.</p>
+      <p>Austin is a Masters Student in Bioinformatics for Health Sciences at Universitat Pompeu Fabra (UPF) in Barcelona</p>
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/C Fuenteslopez (1).jpg" alt="carla" style="width:68%">
       <h3>Carla V. Fuenteslópez</h3>
       <p class="w3-opacity">Collaborator</p>
-      <p>Carla is a DPhil Student studying Engineering Science, with a focus in nanomedicine and tissue engineering, at the University of Oxford.</p>
+      <p>Carla is a DPhil Student studying Engineering Science at the University of Oxford</p>
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/javi.jpeg" alt="javi" style="width:68%">
       <h3>Javier Corvi</h3>
       <p class="w3-opacity">Collaborator</p>
-      <p>Javi is a Research Engineer at the Barcelona Supercomputing Center.</p>
+      <p>Javi is a Research Engineer at the Barcelona Supercomputing Center</p>
       <p class="w3-opacity"></p>
     </div>
   </div>
@@ -213,7 +213,7 @@
       <img src="images/AlexPerera.jpeg" alt="javi" style="width:68%">
       <h3>Alex Lluna Perera</h3>
       <p class="w3-opacity">Scientific advisor</p>
-      <p>Alex is leader of the bioinformatics and biomedical signals laboratory (B2S) at the Universitat Politècnica de Catalunya.</p>
+      <p>Alex is leader of the bioinformatics and biomedical signals laboratory (B2S) at the Universitat Politècnica de Catalunya</p>
       <p class="w3-opacity"></p>
     </div>
   </div>
