--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         update reviews of the literature in a more rapid and repeatable manner
         as well as generate a comprehensive map of research activity and findings.
     </p>
-      <p>The DEBBIE Database contains annotations of PubMed abstracts in field of biomaterials, inclduing implants, medical devices, and exeprimental scaffolds. Each annotation is labelled by one or more of the following categories:</p>
+      <p>The DEBBIE Database contains annotations of PubMed abstracts in field of biomaterials, including implants, medical devices, and exeprimental scaffolds. Each annotation is labelled by one or more of the following categories:</p>
           <ul class="list">
           <li>Biomaterial</li>
           <li>Structure</li>
