--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <img src="images/MKrallinger.jpeg" alt="austin" style="width:70%">
       <h3>Martin Krallinger</h3>
       <p class="w3-opacity">Scientific advisor</p>
-      <p>Martin Krallinger is the head of the text mining unit at the Barcelona Supercomputing Center</p>
+      <p>Martin is the head of the text mining unit at the Barcelona Supercomputing Center</p>
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
