changes to text and images

--- a/index.html
+++ b/index.html
@@ -185,35 +185,31 @@
 </div>
 
 <div class="w3-container w3-padding-16" id="team">
-    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Scientific Advice</h2>
+    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Scientific Advisors</h2>
   <div class="w3-row-padding">
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/MPGinebra.jpeg" alt="osnat" style="width:70%;">
       <h3>Maria-Pau Ginebra</h3>
-      <p class="w3-opacity">Scientific advisor</p>
-      <p>Maria-Pau is head of the Department of Materials and Engineering at the Universitat Politècnica de Catalunya</p>
+      <p>Maria-Pau leads the Department of Materials and Engineering at the Universitat Politècnica de Catalunya</p>
       <!--<p><button class="w3-button w3-blue w3-block">Contact</button></p> -->
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/MKrallinger.jpeg" alt="austin" style="width:70%">
       <h3>Martin Krallinger</h3>
-      <p class="w3-opacity">Scientific advisor</p>
-      <p>Martin is the head of the text mining unit at the Barcelona Supercomputing Center</p>
+      <p>Martin leads the Text Mining Unit at the Barcelona Supercomputing Center</p>
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
-      <img src="images/Gelpi.jpeg" alt="carla" style="width:68%">
+      <img src="images/Gelpi.jpeg" alt="carla" style="width:70%;">
       <h3>Josep Gelpi</h3>
-      <p class="w3-opacity">Scientific advisor</p>
-      <p>Josep is a group leader at the Barcelona Supercomputing Center</p>
+      <p>Josep leads the Computational Team for the National Institute of Bioinformatics at the Barcelona Supercomputing Center</p>
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
-      <img src="images/AlexPerera.jpeg" alt="javi" style="width:68%">
+      <img src="images/AlexPerera.jpeg" alt="javi" style="width:67%;">
       <h3>Alex Lluna Perera</h3>
-      <p class="w3-opacity">Scientific advisor</p>
-      <p>Alex is leader of the bioinformatics and biomedical signals laboratory (B2S) at the Universitat Politècnica de Catalunya</p>
+      <p>Alex is leader of the Bioinformatics and Biomedical Signals Laboratory (B2S) at the Universitat Politècnica de Catalunya</p>
       <p class="w3-opacity"></p>
     </div>
   </div>
