--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/MPGinebra.jpeg" alt="osnat" style="width:70%;">
       <h3>Maria-Pau Ginebra</h3>
-      <p>Maria-Pau leads the Department of Materials and Engineering at the Universitat Politècnica de Catalunya</p>
+      <p>Maria-Pau leads the Department of Materials Science and Engineering at the Universitat Politècnica de Catalunya</p>
       <!--<p><button class="w3-button w3-blue w3-block">Contact</button></p> -->
       <p class="w3-opacity"></p>
     </div>
@@ -208,8 +208,8 @@
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/AlexPerera.jpeg" alt="javi" style="width:67%;">
-      <h3>Alex Lluna Perera</h3>
-      <p>Alex is leader of the Bioinformatics and Biomedical Signals Laboratory (B2S) at the Universitat Politècnica de Catalunya</p>
+      <h3>Alexandre Perera Lluna</h3>
+      <p>Alexandre is leader of the Bioinformatics and Biomedical Signals Laboratory (B2S) at the Universitat Politècnica de Catalunya</p>
       <p class="w3-opacity"></p>
     </div>
   </div>
