--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/AlexPerera.jpeg" alt="javi" style="width:67%;">
       <h3>Alexandre Perera Lluna</h3>
-      <p>Alexandre is leader of the Bioinformatics and Biomedical Signals Laboratory (B2S) at the Universitat Politècnica de Catalunya</p>
+      <p>Alexandre leads the Bioinformatics and Biomedical Signals Laboratory (B2S) at the Universitat Politècnica de Catalunya</p>
       <p class="w3-opacity"></p>
     </div>
   </div>
