--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
       </div>
     </div>
     <div class="w3-row-padding">
-      <div class="w3-col l3 m3 s3 w3-margin-bottom">
+       <div class="w3-col l3 s3 m3 w3-margin-bottom">
+        <a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc"><img src="images/osnat_medium_article1.png" alt="osnat_medium_article1" style="width:60%"></a>
+        <p><a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc">Could data analysis prevent unnecessary suffering?</a></p>
+      </div>                          
       </div>
     </div>
     <div class="w3-row-padding">
