--- a/index.html
+++ b/index.html
@@ -129,20 +129,16 @@
 <div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="research">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Research</h2>
     <div class="w3-row-padding">
-      <div class="w3-col l3 s3 m3 w3-margin-bottom">
+      <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
         <a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc"><img src="images/osnat_medium_article1.png" alt="osnat_medium_article1" style="width:60%"></a>
         <p><a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc">Could data analysis prevent unnecessary suffering?</a></p>
       </div>
-       <div class="w3-col l3 s3 m3 w3-margin-bottom">
+      <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
         <a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910"><img src="images/TOC_20200209.tif" alt="osnat_medium_article1" style="width:60%"></a>
         <p><a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910">The Devices, Experimental Scaffolds, and Biomaterials Ontology (DEB): A Tool for Mapping, Annotation, and Analysis of Biomaterials' Data</a></p>
-      </div>                          
-    </div>
-    <div class="w3-row-padding">
+      </div>                         
       <div class="w3-col l3 m3 s3 w3-margin-bottom">
       </div>
-    </div>
-    <div class="w3-row-padding">
       <div class="w3-col l3 m3 s3 w3-margin-bottom">
       </div>
     </div>
