--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <p><a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc">Could data analysis prevent unnecessary suffering? (Medium, December 2019)</a></p>
       </div>
       <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
-        <a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910"><img src="images/TOC_20200209.tif" alt="osnat_medium_article1" style="width:60%"></a>
+        <a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910"><img src="images/TOC_20200209.png" alt="osnat_medium_article1" style="width:60%"></a>
         <p><a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910">The Devices, Experimental Scaffolds, and Biomaterials Ontology (DEB): A Tool for Mapping, Annotation, and Analysis of Biomaterials' Data (Advanced Functional Materials, February 2020)</a></p>
       </div>                         
       <div class="w3-col l3 m3 s3 w3-margin-bottom">
