--- a/index.html
+++ b/index.html
@@ -131,11 +131,13 @@
     <div class="w3-row-padding">
       <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
         <a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc"><img src="images/osnat_medium_article1.png" alt="osnat_medium_article1" style="width:60%"></a>
-        <p><a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc">Could data analysis prevent unnecessary suffering? (Medium, December 2019)</a></p>
+        <p><a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc">Could data analysis prevent unnecessary suffering?</a></p>
+        <p class="w3-opacity">Medium, December 2019</p>
       </div>
       <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
-        <a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910"><img src="images/TOC_20200209.png" alt="osnat_medium_article1" style="width:60%"></a>
-        <p><a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910">The Devices, Experimental Scaffolds, and Biomaterials Ontology (DEB): A Tool for Mapping, Annotation, and Analysis of Biomaterials' Data (Advanced Functional Materials, February 2020)</a></p>
+        <a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910"><img src="images/TOC_20200209.png" alt="osnat_medium_article1" style="width:75%"></a>
+        <p><a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910">The Devices, Experimental Scaffolds, and Biomaterials Ontology (DEB): A Tool for Mapping, Annotation, and Analysis of Biomaterials' Data</a></p>
+        <p class="w3-opacity">Advanced Functional Materials, February 2020</p>
       </div>                         
       <div class="w3-col l3 m3 s3 w3-margin-bottom">
       </div>
