--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
             <div class="w3-display-container w3-center">
-              <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl"><img src="images/dynamic_visualization.png" alt="dynamic" style=" height:480px;width:400px; filter:brightness(110%);border:1px solid #021a40;" ></a>
+              <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl"><img src="images/dynamic_visualization.png" alt="dynamic" style=" width:400px; filter:brightness(110%);border:1px solid #021a40;" ></a>
               <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
             </div>
           </div>
@@ -130,7 +130,7 @@
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Research</h2>
     <div class="w3-row-padding">
       <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
-        <a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc"><img src="images/veg_mesh_word_cloud.png" alt="osnat_medium_article1" style="width:90%"></a>
+        <a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc"><img src="images/veg_mesh_word_cloud.png" alt="osnat_medium_article1" style="width:100%"></a>
         <p><a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc">Could data analysis prevent unnecessary suffering?</a></p>
         <p class="w3-opacity">Medium, December 2019</p>
       </div>
