--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Research</h2>
     <div class="w3-row-padding">
       <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
-        <a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc"><img src="images/veg_mesh_word_cloud.png" alt="osnat_medium_article1" style="width:100%"></a>
-        <p><a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc">Could data analysis prevent unnecessary suffering?</a></p>
+        <a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc"><img src="images/veg_mesh_word_cloud.png" alt="osnat_medium_article1" style="width:95%"></a>
+        <p><a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc">Could data analysis prevent unnecessary suffering? Lessons to learn from the vaginal mesh scandal.</a></p>
         <p class="w3-opacity">Medium, December 2019</p>
       </div>
       <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
