--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
             <div class="w3-display-container w3-center">
-              <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl"><img src="images/dynamic_visualization.png" alt="dynamic" style=" width:400px; filter:brightness(110%);border:1px solid #021a40;" ></a>
+              <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl"><img src="images/dynamic.png" alt="dynamic" style=" width:400px; filter:brightness(110%);border:1px solid #021a40;" ></a>
               <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
             </div>
           </div>
