link to database site

--- a/index.html
+++ b/index.html
@@ -105,22 +105,24 @@
           <ul class="list">
           <li>Biomaterial</li>
           <li>Structure</li>
-          <li>Application</li>
+          <li>Medical Application</li>
           <li>Manufactured Object</li>
+          <li>Adverse Effects</li>
 
           <li>Manufactured Object Features</li>
-          <li>Bioactive Substance</li>
+          <li>Biologically Active Substance</li>
           <li>Tissue</li>
-          <li>Medical Application</li>
-
           <li>Cell</li>
+          <li>Study Type</li>
+
           <li>Effect on Biological System</li>
           <li>Associated Biological Process</li>
           <li>Research Technique</li>
+          <li>Animal Type Model</li>
         </ul>
     <br>
     <center><button style="background-color:#3995F9;font-size:20px;color:white; padding: 10px 32px;
-  text-align: center;"><a href="under_construction.html">DEBBIE Database</a></button></center>
+  text-align: center;"><a href="http://debbie.bsc.es/search/">DEBBIE Database</a></button></center>
   </div>
   <br>
   <br>
